--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://Rohith-14.github.io/WiseReact09",
   "name": "greeting-card",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Rohith-14/WiseReact09",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
