--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Rohith-14.github.io/WiseReact09",
+  "homepage": "https://Rohith-14.github.io/React0309",
   "name": "greeting-card",
   "version": "0.1.0",
   "private": true,
