Updated App.js with final changes and transitions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Rohith-14.github.io/wise0309",
+  "homepage": "https://Rohith-14.github.io/Wise0309",
   "name": "greeting-card",
   "version": "0.1.0",
   "private": true,
